ontol-compiler/test-cases/error/parser/def2.on
def() // ERROR parse error: found `(`, expected one of `@private`, `@open`, `@extern`, `@symbol`, identifier
